.happypack/s-685042214
SyntaxError: Unterminated string constant (47:39)

[0m [90m 45 | [39m    [36mvar[39m textFileAsBlob [33m=[39m [36mnew[39m [33mBlob[39m([text][33m,[39m { type[33m:[39m [32m"text/plain"[39m })[33m;[39m
 [90m 46 | [39m    [36mvar[39m downloadLink [33m=[39m document[33m.[39mcreateElement([32m"a"[39m)[33m;[39m
[31m[1m>[22m[39m[90m 47 | [39m    downloadLink[33m.[39mdownload [33m=[39m filename [33m+[39m [32m';[39m
 [90m    | [39m                                       [31m[1m^[22m[39m
 [90m 48 | [39m    downloadLink[33m.[39minnerHTML [33m=[39m [32m"Download File"[39m[33m;[39m
 [90m 49 | [39m    [36mif[39m (window[33m.[39mwebkitURL [33m!=[39m [36mnull[39m) {
 [90m 50 | [39m      [90m// Chrome allows the link to be clicked[39m[0m

Error
    at transpile (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/eslint-loader/index.js:207:8)
    at applySyncOrAsync (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoader (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/Kylewh/Desktop/playground/projects/coderPad/node_modules/happypack/lib/applyLoaders.js:222:4)